# smartwatch

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.json
_build/: nrf52832_xxaa.hex  nrf52832_xxaa.in  nrf52832_xxaa.map  nrf52832_xxaa.out
_build/nrf52832_xxaa/: CST816S.c.d  HRS3300.c.d  SEGGER_RTT.c.d  SEGGER_RTT_Syscalls_GCC.c.d  SEGGER_RTT_printf.c.d  SGM40561.c.d  ST7735.c.d  ancs_app_attr_get.c.d  ancs_attr_parser.c.d  app_button.c.d  app_error.c.d  app_error_handler_gcc.c.d  app_error_weak.c.d  app_pwm.c.d  app_sensors.c.d  app_settings.c.d  app_timer_freertos.c.d  app_util_platform.c.d  auth_status_tracker.c.d  battery.c.d  ble_advdata.c.d  ble_advertising.c.d  ble_ancs.c.d  ble_bas.c.d  ble_conn_params.c.d  ble_conn_state.c.d  ble_cts_c.c.d  ble_db_discovery.c.d  ble_dis.c.d  ble_general.c.d  ble_hrs.c.d  ble_srv_common.c.d  bma4.c.d  bma421.c.d  bma423.c.d  callbacks.c.d  crc16.c.d  croutine.c.d  display.c.d  display_boot_up.c.d  (+182 more)
build_release/src/: jd_smartwatch.elf  jd_smartwatch.hex  jd_smartwatch.map
build_scripts/: build  build_helper.py  clean
build_test/src/: jd_smartwatch.elf  jd_smartwatch.hex  jd_smartwatch.map
nRF5-cmake-scripts/: nRF5-cmake.cmake
nRF5-cmake-scripts/example/src/: CMakeLists.txt
nRF5-cmake-scripts/includes/: libraries.cmake
scripts/: README.md  analyze_map.py  build  build_fb  build_helper.py  reset.sh
src/: CMakeLists.txt  FreeRTOS.c  FreeRTOSConfig.h  app_config.h  features.h  gcc_nrf52.ld  lv_conf.h  main.c  sdk_config.h  utils.c  utils.h
src/app/ble/: ble_ancs.c  ble_general.c  ble_general.h  ble_update.c  ble_update.h
src/app/display/: display.c  display.h  display_boot_up.c  display_common.c  display_common.h  home.c  home.h
src/app/display_task/: display.c  display.h  display_common.c  display_common.h
src/app/flash_task/: flash_task.c  flash_task.h
src/app/sys_task/: app_battery.c  app_battery.h  app_heart_rate.c  app_heart_rate.h  app_pwr_manager.c  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_system_monitor.c  app_system_monitor.h  sys_task.c  sys_task.h
src/ble/: ble_ancs.c  ble_ancs.h  ble_cus.c  ble_cus.h  ble_general.c  ble_general.h
src/components/: battery.c  battery.h  common.h  display.c  display.h  haptic.c  haptic.h  resources.c  resources.h  sensors.c  sensors.h  sys_task.c  sys_task.h
src/components/alerts/: alerts.c  alerts.h
src/components/battery/: CMakeLists.txt  battery.c  battery.h  test_battery.c
src/components/ble/: ble_ancs.c  ble_ancs.h  ble_general.c  ble_general.h
src/components/callbacks/: callbacks.c  (+1 more)
src/drivers/: CST816S.c  CST816S.h  SGM40561.c  SGM40561.h  ST7735.c  ST7735.h  ST7789.c  ST7789.h  XT25F32B.c  XT25F32B.h  button.c  button.h  display_drv.c  display_drv.h  drv2605l.c  drv2605l.h  peripherals.c  peripherals.h  pwm_driver.c  pwm_driver.h  rtc_driver.c  rtc_driver.h  spi_driver.c  spi_driver.h  ssd1306.c  ssd1306.h  twi_driver.c  twi_driver.h
src/tests/: CMakeLists.txt  test_main.c
toolchains/: CMakeLists.txt
toolchains/Unity/: CMakeLists.txt
(+158 files in other folders)
